# cadgenbench

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  _local_hang_repro.py  pyproject.toml
.cursor/rules/: code-audit.mdc  project-context.mdc  prose-audit.mdc  style.mdc  workspace-layout.mdc
_to_move_to_dataset_repo/: README.md  _build_jig01_edit_fixture.py  sanity_check_gt.py  sanity_check_jig_metric.py  sanity_check_submission.py  sanity_check_topo.py
data/gt/jig-01-edit-double-hole/: ground_truth.step  jig_1__1__KOR.step
data/gt/jig-02-4hole-pattern-plate/: ground_truth.step  jig_1__4__KOR.step
data/gt/jig-03-l-bracket-w-hex/: ground_truth.step  jig_1__4__KOR.step
data/gt/jig-04-slot-and-2-holes-plate/: ground_truth.step
data/inputs/jig-01-edit-double-hole/: description.yaml  input.step
data/inputs/jig-01-single-hole-plate/: description.yaml
data/inputs/jig-02-4hole-pattern-plate/: description.yaml
data/inputs/jig-03-l-bracket-w-hex/: description.yaml
docs/: metrics.md
docs/benchmark/: authoring.md  submission.md  validation.md
docs/metrics/: cad_validity.md  interface_match.md  shape_similarity.md  topo_match.md
docs/metrics/illustrations/: generate.py
src/cadgenbench/: __init__.py  cli.py
src/cadgenbench/baseline/: __init__.py  _cli.py  agent.py  build123d_cheat_sheet.md  cadquery_cheat_sheet.md  compare_llms.py  default_config.yaml  llm.py  openscad_cheat_sheet.md  package.py  prompt.py  types.py
src/cadgenbench/common/: __init__.py  artifacts.py  axes_gizmo.py  baseline_models.py  camera_presets.py  edit_diff.py  imaging.py  measurements.py  mesh.py  paths.py  profiling.py  validity.py  viewer.py
src/cadgenbench/eval/: __init__.py  _cli.py  alignment.py  booleans.py  edit_baseline.py  evaluate.py  feature_edges.py  interface_match.py  interface_match_viz.py  run_summary.py  sampling.py  shape_similarity.py  topo_match.py
src/cadgenbench/eval/report/: __init__.py  compare_runs.py  single_run.py
src/cadgenbench/mcp_agent/: __init__.py  _cli.py  agent.py  mcp_client.py  prompt.py  types.py
tests/: conftest.py  test_cli_optional_extras.py
tests/baseline/: test_agent.py  test_llm.py  test_package.py  test_prompt.py  test_prompt_unchanged.py
tests/common/: adversarial_meshes.py  test_camera_presets.py  test_edit_diff.py  test_imaging.py  test_measurements.py  test_mesh.py  test_mesh_safeguards.py  test_validity.py  test_viewer.py
tests/eval/: test_alignment.py  test_cli_parallelism.py  test_edit_baseline.py  test_evaluate_interface.py  test_evaluate_invalid_fastpath.py  test_feature_edges.py  test_interface_match.py  test_interface_viz_no_occt.py  test_report_input.py  test_run_summary.py  test_sampling.py  test_shape_similarity.py  test_sidecar_alignment.py  test_topo_match.py
tests/eval/fixtures/: cd_box_10_10_10.step  cd_box_10_10_50.step  cd_box_10_20_30.step  cd_box_10_20_31.step  cd_box_12_22_32.step
tests/fixtures/: box.step  cylinder_with_hole.step  generate_fixtures.py  open_shell.step  sphere.step  two_solids.step
tests/fixtures/geometry/: box_10_10_10.step  box_10_10_10_cube_rot73.step  box_10_20_30.step  box_10_20_30_rot37_t10.step  box_20_20_20.step  l_bracket.step  l_bracket_l_rot45.step  sphere_10.step  tapered_box.step
tests/fixtures/jig_metric/: generate.py
tests/fixtures/jig_metric/test_1/: gt.step  jig_1__1__KOR.step
tests/fixtures/jig_metric/test_1/candidates/: broken_1_small_hole.step  broken_2_offset_hole.step  broken_3_no_hole.step
tests/fixtures/jig_metric/test_2/: gt.step  jig_1__1__KOR.step  jig_1__2__KOR.step  jig_1__3__KOR.step
tests/fixtures/jig_metric/test_2/candidates/: broken_1_wrong_spacing.step  broken_2_missing_hole.step  broken_3_wrong_diameter.step
tests/fixtures/jig_metric/test_3/: jig_1__1__KOR.step  jig_1__2__KOR.step  jig_1__3__KOR.step  jig_1__5__KIR.step
tests/fixtures/jig_metric/test_3/candidates/: broken_1_cylinder_boss.step  broken_2_rotated_boss.step  broken_3_shifted_holes.step  correct.step
tests/fixtures/jig_metric/test_4/: jig_1__1__KOR.step  jig_2__1__KOR.step  jig_3__1__KOR.step
tests/fixtures/jig_metric/test_4/candidates/: broken_1_narrow_slot.step  broken_2_slot_offset.step  correct.step
tests/snapshots/: baseline_system_prompt.txt
